tests/compile_fail/missing_real_return.stderr
error: custom attribute panicked
 --> tests/compile_fail/missing_real_return.rs:7:1
  |
7 | #[proptest_lockstep::lockstep_actions(state = Model)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Missing `real_return` in #[action] for `Get`

warning: unused import: `proptest_lockstep::prelude::*`
 --> tests/compile_fail/missing_real_return.rs:2:5
  |
2 | use proptest_lockstep::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
